--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -44,7 +44,7 @@ jobs:
           command: run 
           args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
       - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> backend/schema.rs
-      - run: cd test-project && cargo dsync --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -73,7 +73,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -101,7 +101,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=container test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -129,7 +129,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -157,7 +157,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=storage test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -185,7 +185,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=graphql,auth test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -213,7 +213,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,utoipa test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
