--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -45,7 +45,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -74,7 +74,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -102,7 +102,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -130,7 +130,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -158,7 +158,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
@@ -186,7 +186,7 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
       - run: cd test-project
       - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync
+      - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
