--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -43,12 +43,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
   
   Poem-Postgres-All:
     needs: [Poem-Postgres-None]
@@ -71,12 +71,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth,container,graphql,storage test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Container:
     needs: [Poem-Postgres-None]
@@ -99,12 +99,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=container test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Auth:
     needs: [Poem-Postgres-None]
@@ -127,12 +127,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Storage:
     needs: [Poem-Postgres-None]
@@ -155,12 +155,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=storage test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-GraphQL:
     needs: [Poem-Postgres-None]
@@ -183,9 +183,9 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=graphql,auth test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
       - run: cd test-project && cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
