--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "create-rust-app"
 description = "Set up a modern rust+react web app by running one command."
-version = "9.1.1"
+version = "9.2.0"
 edition = "2018"
 authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
 readme = "../README.md"
@@ -21,6 +21,7 @@ tera = { version="1.17.0" }
 lazy_static = { version="1.4.0" }
 serde = { version = "1.0.152", features = ["derive"] }
 diesel = { version="2.0.0-rc.1", default-features = false, features = ["uuid", "r2d2", "chrono"] } # + plugin_dev, plugin_auth
+once_cell = "1.17.1"
 
 ##
 ## Database
@@ -66,6 +67,9 @@ base64 = { optional=true, version="0.21.0" }
 utoipa = { optional=true, version="3", features=["actix_extras", "chrono", "openapi_extensions"] }
 utoipa-swagger-ui = { optional=true, version="3", features=["actix-web"]}
 
+# plugin_tasks
+fang = { optional=true, version = "0.10.3" }
+
 ##
 ## BACKENDS
 ##
@@ -105,6 +109,7 @@ plugin_auth = ["anyhow", "rust-argon2", "rand", "jsonwebtoken", "chrono", "tsync
 plugin_storage = [ "aws-config", "aws-types", "aws-endpoint", "aws-sdk-s3", "tokio", "http", "diesel_derives", "uuid", "md5", "mime_guess", "base64" ] # note: might need to add "futures-util"?
 plugin_graphql = []
 plugin_utoipa = ["utoipa", "utoipa-swagger-ui", "backend_actix-web"]
+plugin_tasks = ["fang"]
 backend_poem = ["poem", "anyhow", "mime_guess", "tokio"]
 backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-multipart", "actix-web-httpauth","derive_more", "futures", "env_logger"]
 backend_axum = ["axum", "axum/ws", "tokio"]
