--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -69,94 +69,94 @@ jobs:
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
       - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
-  Poem-Sqlite-Container:
-    needs: [Poem-Sqlite-None]
-    name: Poem w/ Sqlite and the container plugin
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            **/.cargo/.build
-            **/target
-          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config --global user.name test
-      - run: git config --global user.email example@email.com
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-
-  Poem-Sqlite-Auth:
-    needs: [Poem-Sqlite-None]
-    name: Poem w/ Sqlite and the auth plugin
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            **/.cargo/.build
-            **/target
-          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config --global user.name test
-      - run: git config --global user.email example@email.com
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-
-  Poem-Sqlite-Storage:
-    needs: [Poem-Sqlite-None]
-    name: Poem w/ Sqlite and the storage plugin
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            **/.cargo/.build
-            **/target
-          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config --global user.name test
-      - run: git config --global user.email example@email.com
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
-
-  Poem-Sqlite-GraphQL:
-    needs: [Poem-Sqlite-None]
-    name: Poem w/ Sqlite and the graphql plugin
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - run: rustup install stable
-      - run: rustup update
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            **/.cargo/.build
-            **/target
-          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config --global user.name test
-      - run: git config --global user.email example@email.com
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+  # Poem-Sqlite-Container:
+  #   needs: [Poem-Sqlite-None]
+  #   name: Poem w/ Sqlite and the container plugin
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3.3.0
+  #     - uses: rui314/setup-mold@v1
+  #     - run: rustup install stable
+  #     - run: rustup update
+  #     - uses: actions/cache@v3.2.5
+  #       with:
+  #         path: |
+  #           **/.cargo/.build
+  #           **/target
+  #         key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+  #     - run: git config --global user.name test
+  #     - run: git config --global user.email example@email.com
+  #     - uses: actions-rs/cargo@v1.0.3
+  #       with:
+  #         command: run
+  #         args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
+  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+  #
+  # Poem-Sqlite-Auth:
+  #   needs: [Poem-Sqlite-None]
+  #   name: Poem w/ Sqlite and the auth plugin
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3.3.0
+  #     - uses: rui314/setup-mold@v1
+  #     - run: rustup install stable
+  #     - run: rustup update
+  #     - uses: actions/cache@v3.2.5
+  #       with:
+  #         path: |
+  #           **/.cargo/.build
+  #           **/target
+  #         key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+  #     - run: git config --global user.name test
+  #     - run: git config --global user.email example@email.com
+  #     - uses: actions-rs/cargo@v1.0.3
+  #       with:
+  #         command: run
+  #         args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
+  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+  #
+  # Poem-Sqlite-Storage:
+  #   needs: [Poem-Sqlite-None]
+  #   name: Poem w/ Sqlite and the storage plugin
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3.3.0
+  #     - uses: rui314/setup-mold@v1
+  #     - run: rustup install stable
+  #     - run: rustup update
+  #     - uses: actions/cache@v3.2.5
+  #       with:
+  #         path: |
+  #           **/.cargo/.build
+  #           **/target
+  #         key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+  #     - run: git config --global user.name test
+  #     - run: git config --global user.email example@email.com
+  #     - uses: actions-rs/cargo@v1.0.3
+  #       with:
+  #         command: run
+  #         args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
+  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+  #
+  # Poem-Sqlite-GraphQL:
+  #   needs: [Poem-Sqlite-None]
+  #   name: Poem w/ Sqlite and the graphql plugin
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3.3.0
+  #     - uses: rui314/setup-mold@v1
+  #     - run: rustup install stable
+  #     - run: rustup update
+  #     - uses: actions/cache@v3.2.5
+  #       with:
+  #         path: |
+  #           **/.cargo/.build
+  #           **/target
+  #         key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+  #     - run: git config --global user.name test
+  #     - run: git config --global user.email example@email.com
+  #     - uses: actions-rs/cargo@v1.0.3
+  #       with:
+  #         command: run
+  #         args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
+  #     - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
