--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -44,7 +44,7 @@ jobs:
           command: run 
           args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
       - name: test test-project
-        working_directory: ./test-project
+        working-directory: ./test-project
         run: |
           printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
           sed -i 's\create-rust-app = {\create-rust-app = { path = "../create-rust-app", \' ./Cargo.toml 
