--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -34,8 +34,7 @@ jobs:
       - uses: actions/cache@v3.2.5
         with:
           path: |
-            **/.cargo/.build
-            **/target
+            */.cargo/.build
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config --global user.name test
       - run: git config --global user.email example@email.com
@@ -43,7 +42,13 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+      - name: test test-project
+        working-directory: ./test-project
+        run: |
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's\create-rust-app = {\create-rust-app = { path = "../create-rust-app", \' ./Cargo.toml 
+          cargo dsync 
+          cargo check
 
  
   Poem-Sqlite-All:
@@ -58,8 +63,7 @@ jobs:
       - uses: actions/cache@v3.2.5
         with:
           path: |
-            **/.cargo/.build
-            **/target
+            */.cargo/.build
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config --global user.name test
       - run: git config --global user.email example@email.com
@@ -67,7 +71,13 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
-      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
+      - name: test test-project
+        working-directory: ./test-project
+        run: |
+          printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs 
+          sed -i 's\create-rust-app = {\create-rust-app = { path = "../create-rust-app", \' ./Cargo.toml 
+          cargo dsync 
+          cargo check
 
   # Poem-Sqlite-Container:
   #   needs: [Poem-Sqlite-None]
