git "all plugins" builds separate caches

--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           path: |
             .cargo/.build
-          key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-cli-AP-all-${{ hashFiles('**/Cargo.lock') }}
       - run: git config --global user.name test
       - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
