Maintenance, dependency updates (#243)
* update as many dependencies as possible w/o breaking changes

* remove 7 unused dependencies

used cargo-udeps to find these

--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -21,12 +21,12 @@ categories = [
 ## COMMON / DEFAULT - required dependencies
 ##
 dotenv = "0.15.0" # + plugin_dev
-serde_json = "1.0.93"
-lettre = "0.10.2"
-tera = { version = "1.17.0" }
+serde_json = "1.0.96"
+lettre = "0.10.4"
+tera = { version = "1.18.1" }
 lazy_static = { version = "1.4.0" }
-serde = { version = "1.0.152", features = ["derive"] }
-diesel = { version = "2.0.0-rc.1", default-features = false, features = [
+serde = { version = "1.0.163", features = ["derive"] }
+diesel = { version = "2.1.0", default-features = false, features = [
   "uuid",
   "r2d2",
   "chrono",
@@ -38,7 +38,7 @@ once_cell = "1.17.1"
 ##
 
 # sqlite dependencies
-libsqlite3-sys = { version = "0.25", optional = true, features = ["bundled"] }
+libsqlite3-sys = { version = "0.26", optional = true, features = ["bundled"] }
 
 ##
 ## PLUGINS
@@ -47,35 +47,35 @@ libsqlite3-sys = { version = "0.25", optional = true, features = ["bundled"] }
 # plugin_auth
 rust-argon2 = { optional = true, version = "1.0" }
 rand = { optional = true, version = "0.8.5" }
-jsonwebtoken = { optional = true, version = "8.2.0" }
-tsync = { optional = true, version = "1.6.0" }
-chrono = { optional = true, version = "0.4.23", default-features = false, features = [
+jsonwebtoken = { optional = true, version = "8.3.0" }
+tsync = { optional = true, version = "1.7.0" }
+chrono = { optional = true, version = "0.4.24", default-features = false, features = [
   "clock",
   "serde",
 ] }
 dyn-clone = { optional = true, version = "1.0" } # needed to allow the Mailer struct to be cloned
 
 # plugin_dev
-diesel_migrations = { optional = true, version = "2.0.0" }
-cargo_metadata = { optional = true, version = "0.15.2" }
-watchexec = { optional = true, version = "2.2.0" }
+diesel_migrations = { optional = true, version = "2.1.0" }
+cargo_metadata = { optional = true, version = "0.15.4" }
+watchexec = { optional = true, version = "2.3.0" }
 #### tracing = { optional=true, version="0.1" }
 #### tracing-subscriber = { optional=true, version="0.3.16", features=["env-filter"] }
-reqwest = { optional = true, version = "0.11.13" }
-clearscreen = { optional = true, version = "2.0.0" }
-open = { optional = true, version = "3.2.0" }
-cargo_toml = { optional = true, version = "0.14.0" }
+reqwest = { optional = true, version = "0.11.18" }
+clearscreen = { optional = true, version = "2.0" }
+open = { optional = true, version = "4.1.0" }
+cargo_toml = { optional = true, version = "0.15.2" }
 
 # plugin_storage
-aws-config = { optional = true, version = "0.14.0" }
+# aws-config = { optional = true, version = "0.14.0" }
 aws-types = { optional = true, version = "0.8.0" }
-aws-endpoint = { optional = true, version = "0.14.0" }
+# aws-endpoint = { optional = true, version = "0.14.0" }
 aws-sdk-s3 = { optional = true, version = "0.8.0" }
-http = { optional = true, version = "0.2.6" }
-diesel_derives = { optional = true, version = "2.0.1" }
-uuid = { optional = true, version = "1.2.2", features = ["v4", "serde"] }
+http = { optional = true, version = "0.2.9" }
+diesel_derives = { optional = true, version = "2.1.0" }
+uuid = { optional = true, version = "1.3.3", features = ["v4", "serde"] }
 md5 = { optional = true, version = "0.7.0" }
-base64 = { optional = true, version = "0.21.0" }
+base64 = { optional = true, version = "0.21.2" }
 
 # plugin_utoipa dependencies
 utoipa = { optional = true, version = "3", features = [
@@ -83,7 +83,6 @@ utoipa = { optional = true, version = "3", features = [
   "chrono",
   "openapi_extensions",
 ] }
-utoipa-swagger-ui = { optional = true, version = "3", features = ["actix-web"] }
 
 # plugin_tasks
 fang = { optional = true, version = "0.10.3" }
@@ -93,37 +92,37 @@ fang = { optional = true, version = "0.10.3" }
 ##
 
 # poem dependencies
-poem = { optional = true, version = "1.3.52", features = [
+poem = { optional = true, version = "1.3.55", features = [
   "anyhow",
   "cookie",
   "static-files",
 ] }
 
 # actix_web dependencies
-actix-multipart = { optional = true, version = "0.4.0" }
+# actix-multipart = { optional = true, version = "0.6.0" }
 actix-files = { optional = true, version = "0.6.2" }
-actix-http = { optional = true, version = "3.0.4" }
-actix-web = { optional = true, version = "4.2.1" }
-actix-web-httpauth = { optional = true, version = "0.8.0" }
+actix-http = { optional = true, version = "3.3.1" }
+actix-web = { optional = true, version = "4.3.1" }
+# actix-web-httpauth = { optional = true, version = "0.8.0" }
 derive_more = { optional = true, version = "0.99.17" }
-futures = { optional = true, version = "0.3.25" }
-env_logger = { optional = true, version = "0.10.0" }
+futures = { optional = true, version = "0.3.28" }
+# env_logger = { optional = true, version = "0.10.0" }
 
 # axum dependencies (not yet released; only used for plugin_dev)
 
-axum = { optional = true, version = "0.6.1" }
+axum = { optional = true, version = "0.6.18" }
 
 ##
 ## MISC - here, we list deps which are required by multiple features but are not required in all configurations
 ##
 
 mime_guess = { optional = true, version = "2.0.4" } # backend_poem, plugin_storage
-anyhow = { optional = true, version = "1.0.57" } # backend_poem, plugin_auth, plugin_dev
+anyhow = { optional = true, version = "1.0.71" } # backend_poem, plugin_auth, plugin_dev
 tokio = { optional = true, version = "1", features = [
   "full",
 ] } # backend_poem, backend_axum, plugin_storage
 async-priority-channel = "0.1.0"
-futures-util = { optional = true, version = "0.3.25" } # plugin_dev, TODO:plugin_storage?
+futures-util = { optional = true, version = "0.3.28" } # plugin_dev, TODO:plugin_storage?
 
 [features]
 default = [
@@ -159,9 +158,9 @@ plugin_auth = [
   "dyn-clone",
 ]
 plugin_storage = [
-  "aws-config",
+  # "aws-config",
   "aws-types",
-  "aws-endpoint",
+  # "aws-endpoint",
   "aws-sdk-s3",
   "tokio",
   "http",
@@ -172,18 +171,18 @@ plugin_storage = [
   "base64",
 ] # note: might need to add "futures-util"?
 plugin_graphql = []
-plugin_utoipa = ["utoipa", "utoipa-swagger-ui", "backend_actix-web"]
+plugin_utoipa = ["utoipa", "backend_actix-web"]
 plugin_tasks = ["fang"]
 backend_poem = ["poem", "anyhow", "mime_guess", "tokio"]
 backend_actix-web = [
   "actix-web",
   "actix-http",
   "actix-files",
-  "actix-multipart",
-  "actix-web-httpauth",
+  # "actix-multipart",
+  # "actix-web-httpauth",
   "derive_more",
   "futures",
-  "env_logger",
+  # "env_logger",
 ]
 backend_axum = ["axum", "axum/ws", "tokio"]
 database_sqlite = [
