--- a/create-rust-app_cli/Cargo.toml
+++ b/create-rust-app_cli/Cargo.toml
@@ -19,17 +19,17 @@ default-run = "create-rust-app"
 
 [dependencies]
 Inflector = "0.11.4"
-anyhow = "1.0.68"
-console = "0.15.5"
-dialoguer = "0.10.3"
-indoc = "1.0.8"
-walkdir = "2.3.2"
-rust-embed = { version = "6.4.2", features = ["debug-embed"] }
-clap = { version = "4.1", features = ["wrap_help", "derive", "cargo"] }
-toml = "0.5.11"
-tsync = "1"
-update-informer = "0.6.0"
-qsync = { version = "0.1.0" }
+anyhow = "1.0.71"
+console = "0.15.7"
+dialoguer = "0.10.4"
+indoc = "2.0.1"
+walkdir = "2.3.3"
+rust-embed = { version = "6.6.1", features = ["debug-embed"] }
+clap = { version = "4.3", features = ["wrap_help", "derive", "cargo"] }
+toml = "0.7.4"
+# tsync = "1"
+update-informer = "1.0.0"
+qsync = { version = "0.1" }
 
 [[bin]]
 name = "create-rust-app"
